[package]
name = "tonic-bidi-error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures = "0.3.26"
log = "0.4.17"
prost = "0.11.8"
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
tonic = "0.8.3"

[build-dependencies]
tonic-build = "0.8.4"
